# gtk

./: .gitignore  meson_options.txt
demos/gtk-demo/: meson.build
demos/widget-factory/: meson.build
gdk/win32/: gdksurface-win32.c
modules/printbackends/: gtkprintbackendcpdb.c  gtkprintbackendcpdb.h  gtkprintercpdb.c  gtkprintercpdb.h  meson.build
subprojects/: fribidi.wrap  harfbuzz.wrap
